repo-sql-impl: mostly type parameters cleanup in service+helpers